# bot

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DOCUMENTACION.md  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  ver_grafo.py
bots/: __init__.py
bots/alejandro/: __init__.py  grafo.py  nodos.py  router.py  tools.py
bots/daniela/: __init__.py  almacen.py  exportar.py  grafo.py  nodos.py  tools.py
bots/julieta/: __init__.py  almacen.py  exportar.py  grafo.py  nodos.py  tools.py
deploy/: Caddyfile  GUIA.md  actualizar.sh  bots.service  respaldar.sh
interfaces/: __init__.py  cli.py  meta.py  whatsapp.py
memory/: decisiones.md  roadmap.md
nucleo/: __init__.py  config.py  ejecucion.py  grafo.py  limites.py  mensajes.py  nodos.py  router.py  state.py
nucleo/llm/: __init__.py  proveedores.py
